<resources>
    <string name="app_name">Amadeus</string>

    <!-- LaunchActivity -->
    <string name="call">Connect to Kurisu?</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnected">Disconnected.</string>
    <string name="google_app_error">Google App wasn\'t detected.</string>
    <string name="incoming_call">Call from Kurisu.</string>
    <string name="notification_text">Your waifu misses you.</string>

    <!-- Defaults -->
    <string name="default_lang">en</string>
    <string name="default_recog_lang">en-US</string>
    <string name="default_kurisu_outfit">amadeus</string>
    <string name="default_background">0</string>

    <!-- Settings -->
    <string name="pref_app_settings">Application settings</string>
    <string name="pref_recog_lang">Recognition language</string>
    <string name="pref_recog_lang_desc">Select voice recognition language</string>
    <string name="pref_lang">Language</string>
    <string name="pref_lang_desc">Select app language (app restart required)</string>
    <string name="pref_subtitles">Show subtitles</string>
    <string name="pref_subtitles_desc">Shows subtitles for Amadeus\' answers</string>
    <string name="pref_notification">Show &quot;XP&quot;-Icon</string>
    <string name="pref_notification_desc">Shows Icon in the notification bar (app restart required)</string>
    <string name="pref_alarm_settings">Alarm settings</string>
    <string name="pref_alarm_setup">Alarm setup</string>
    <string name="pref_alarm_ringtone">Alarm ringtone</string>
    <string name="pref_alarm_ringtone_desc">Select ringtone for alarm</string>
    <string name="pref_alarm_vibrate">Vibrate on alarm</string>
    <string name="pref_alarm_24hour_format">24-hour format</string>
    <string name="pref_appearance_settings">Appearance</string>
    <string name="pref_kurisu_outfits">Kurisu outfits</string>
    <string name="pref_kurisu_outfits_desc">Select Kurisu\'s outfit (WIP: might work only for 1080p devices)</string>
    <string name="pref_backgrounds">Backgrounds</string>
    <string name="pref_backgrounds_desc">Choose background (not implemented yet)</string>

    <!-- Commands -->
    <string name="open">open</string>
    <string name="set_alarm">set alarm</string>
    <string name="cancel_alarm">cancel alarm</string>
</resources>
