<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_app_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="show_notification"
            android:summary="@string/pref_notification_desc"
            android:title="@string/pref_notification" />
        <ListPreference
            android:defaultValue="@string/default_recog_lang"
            android:entries="@array/languagesRecogArray"
            android:entryValues="@array/languagesRecogValues"
            android:key="recognition_lang"
            android:summary="@string/pref_recog_lang_desc"
            android:title="@string/pref_recog_lang" />
        <ListPreference
            android:defaultValue="@string/default_lang"
            android:entries="@array/languagesArray"
            android:entryValues="@array/languagesValues"
            android:key="lang"
            android:summary="@string/pref_lang_desc"
            android:title="@string/pref_lang" />
        <Preference android:title="Check for update">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.suneku.amadeus"
                android:targetClass="com.suneku.amadeus.UpdateActivity" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_appearance_settings">
        <ListPreference
            android:defaultValue="@string/default_background"
            android:entries="@array/backgroundsArray"
            android:entryValues="@array/backgroundsValues"
            android:key="kurisu_outfits"
            android:summary="@string/pref_backgrounds_desc"
            android:title="@string/pref_backgrounds" />
        <ListPreference
            android:defaultValue="@string/default_kurisu_outfit"
            android:entries="@array/kurisuOutfitsArray"
            android:entryValues="@array/kurisuOutfitsValues"
            android:key="kurisu_outfits"
            android:summary="@string/pref_kurisu_outfits_desc"
            android:title="@string/pref_kurisu_outfits" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_alarm_settings">
        <Preference android:title="@string/pref_alarm_setup">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.suneku.amadeus"
                android:targetClass="com.suneku.amadeus.AlarmActivity" />
        </Preference>
        <ListPreference
            android:entries="@array/ringtonesArray"
            android:entryValues="@array/ringtonesValues"
            android:key="ringtone"
            android:summary="@string/pref_alarm_ringtone_desc"
            android:title="@string/pref_alarm_ringtone" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="24-hour_format"
            android:title="@string/pref_alarm_24hour_format" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="vibrate"
            android:title="@string/pref_alarm_vibrate" />
    </PreferenceCategory>
</PreferenceScreen>